Update and rename index.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 				}
 			</style>
  
-			<title><h1>Página Principal</h1></title>
+			<title>Página Principal</title>
 				<meta charset= "utf-8">
 			<h1> PÁGINA INICIAL</h1>
 			<img src = "MeDáUmPonto.JPG"
